	(find-column-schema nth-column-schema): Renamed arguments and
	improved code readability
	(collect-column-schema): Expanded argument kinds to handle tables
	or table-schema.  Also improved code reliability
	(numeric-table): Removed accessor to table data from `table'.
	Table data is really a private property, and its format may change
	in future versions of the software

	* init/utilities.lisp (mklist): Added documentation
	(init-vv-array): Renamed make-vv-array into init-vv-array
	(vv-table-equal): Renamed vv-table-equality to vv-table-equal

2012-12-12  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/linear-least-squares-fit-column.lisp: New
	file for linear fitting

	* column-major-table/table-building.lisp (set-table-column): Bug
	fix: Added value normalization.

	* init/generic-numeric-table.lisp (nth-column-schema): New function

2012-12-10  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/interpolated-column.lisp: Added symbol export

	* column-major-table/non-lin-least-sq-fit-column.lisp:
	Added symbol export

2012-12-09  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/non-lin-least-sq-fit-column.lisp
	(non-lin-ls-sq-column-schema): Updated documentation and removed
	dead code.
	(non-lin-ls-sq-column-schema): Added sigma slot
	(make-column-schema): Added documentation stub
	(init-column-fit): Added extensive documentation
	(init-column-fit): Added sigma argument and code.  Not
	exhaustively tested.  But the current unit-tests are passing. 

	* column-major-table/interpolated-column.lisp (interpolated-column-schema): New class, derived from foreign-column
	(make-column-schema): Function for creating instances of schemas for interpolated columns
	(init-column-interp): Adapted to new class
	(init-column-interp): Adapted test to new class creation

	* column-major-table/foreign-column.lisp (:numeric-table):
	Refactored interpolated-column into foreign-column.  This will