@@ -10,13 +10,13 @@ TABLE-SCHEMA is supposed to be a sub-set of TABLE's own table-schema")
 ;;; Modeled after PCL's routine on p. 393
   (:method ((old-table column-major-table) (table-schema cons))
     (let* ((table-schema/old (table-schema old-table))
-	   (data (table old-table))
+	   (data (table-data old-table))
 	   (columns (mapcar
 		     (lambda (column-schema/new)
 		       (position-if
 			(lambda (column-schema/old)
-			  (equal (name column-schema/new)
-				 (name column-schema/old)))
+			  (equal (slot-value column-schema/new 'name)
+				 (slot-value column-schema/old 'name)))
 			table-schema/old))
 		     table-schema)))
       #'(lambda (i-row)
@@ -44,7 +44,7 @@ TABLE-SCHEMA is supposed to be a sub-set of TABLE's own table-schema")
 WHERE is a function of one argument: the table row index"
   (let* ((column-count (length data))
 	 (row-count (length (aref data 0)))
-	 (new-data (make-vv-array column-count)))
+	 (new-data (init-vv-array column-count)))
     (dotimes (i row-count)
       (when (funcall where i)
 	(dotimes (j column-count)
@@ -54,7 +54,7 @@ WHERE is a function of one argument: the table row index"
 
 (define-test restrict-rows-1
   "Test row restriction by selecting every even row"
-  (let ((table (table (loaded-test-table))))
+  (let ((table (table-data (loaded-test-table))))
     (let ((col-count (length table))
 	  (row-count (length (aref table 0)))
 	  (new-table
@@ -65,11 +65,11 @@ WHERE is a function of one argument: the table row index"
     (assert-equal (/ row-count 2)
 		  (length (aref new-table 0)))
     (assert-true
-     (vv-table-equality table new-table :target-rows target-rows)))))
+     (vv-table-equal table new-table :target-rows target-rows)))))
 
 (define-test restrict-rows-2
   "Test row restriction by selecting every row whose third column contains 1.4"
-  (let ((table (table (loaded-test-table)))
+  (let ((table (table-data (loaded-test-table)))
 	(target-rows '(0 3 5 7)))
     (let ((col-count (length table))
 	  (row-count (length (aref table 0)))
@@ -79,16 +79,16 @@ WHERE is a function of one argument: the table row index"
       (assert-equal col-count (length new-table))
       (assert-equal 4 (length (aref new-table 0)))
       (assert-true
-       (vv-table-equality table new-table :target-rows target-rows)))))
+       (vv-table-equal table new-table :target-rows target-rows)))))
 
 (defmethod project-columns (table-schema old-data (schema cons))
   "Return a new data-table that contains columns specified by SCHEMA"
-  (let ((new-data (make-vv-array (length schema))))
+  (let ((new-data (init-vv-array (length schema))))
     (loop
        :for new-col across new-data
        :for new-col-schema in schema
-       :for col-name = (name new-col-schema)
-       :for old-col-index = (position col-name table-schema :key #'name)
+       :for col-name = (slot-value new-col-schema 'name)
+       :for old-col-index = (position col-name table-schema :key #'column-name)
        :for j upfrom 0
        :when old-col-index
        :do (setf (aref new-data j) (aref old-data old-col-index)))
@@ -97,7 +97,7 @@ WHERE is a function of one argument: the table row index"
 (define-test project-columns
   "The new table consists of columns 0 and 2 of the old table"
   (let* ((cm-table (loaded-test-table))
-	 (table (table cm-table))
+	 (table (table-data cm-table))
 	 (schema (table-schema cm-table))
 	 (new-schema (list (first schema) (third schema)))
 	 (new-table (project-columns schema table new-schema)))
@@ -118,9 +118,10 @@ by the caller routine."
   (multiple-value-bind (col-indices tests)
       (loop :for column-name in column-names
 	 :collect (position column-name table-schema
-			    :key #'name) :into indices
-	 :collect (equality-predicate (find column-name table-schema
-					    :key #'name)) :into tests
+			    :key #'column-name) :into indices
+	 :collect (slot-value (find column-name table-schema
+					    :key #'column-name)
+			      'equality-predicate) :into tests
 	 :finally (return (values indices tests)))
     #'(lambda (i1 i2)
         (loop for j in col-indices and test in tests
@@ -134,7 +135,7 @@ Thus rows 0 and 3 are duplicates
 0 and 1 are not because neither columns match
 0 and 5 are not because PETAL-WIDTH does not match"
   (let* ((cm-table (loaded-test-table))
-	 (data (table cm-table))
+	 (data (table-data cm-table))
 	 (schema (table-schema cm-table))
 	 (row-equality-tester (row-equality-tester/cmt data '(petal-length petal-width) schema)))
     (assert-true (not (funcall row-equality-tester 0 1)))
@@ -156,7 +157,7 @@ caller routine"
     (let ((row-index
 	   (loop :for i below row-count
 	      :collect i))
-	  (new-data (make-vv-array col-count)))
+	  (new-data (init-vv-array col-count)))
       (setf row-index
 	    (delete-duplicates row-index
 			 :test (row-equality-tester/cmt
@@ -174,21 +175,21 @@ caller routine"
 and then together This rows returned with the last test are a union of
 rows returned in the first two tests"
   (let* ((cm-table (loaded-test-table))
-	 (data (table cm-table))
+	 (data (table-data cm-table))
 	 (schema (table-schema cm-table)))
     (let ((target-rows '(1 4 7 9)))
       (assert-true
-       (vv-table-equality data
+       (vv-table-equal data
 			  (distinct-rows data '(petal-length) schema)
 			  :target-rows target-rows)))
     (let ((target-rows '(4 5 8 9)))
       (assert-true
-       (vv-table-equality data
+       (vv-table-equal data
 			  (distinct-rows data '(petal-width) schema)
 			  :target-rows target-rows)))
     (let ((target-rows '(1 4 5 7 8 9)))
       (assert-true
-       (vv-table-equality data
+       (vv-table-equal data
 			  (distinct-rows data '(petal-width petal-length) schema)
 			  :target-rows target-rows)))))
   
@@ -197,9 +198,9 @@ rows returned in the first two tests"
   (multiple-value-bind (col-indices tests)
       (loop :for column-name in column-names
 	 :collect (position column-name table-schema
-			    :key #'name) :into indices
+			    :key #'column-name) :into indices
 	 :collect (comparator (find column-name table-schema
-				    :key #'name)) :into tests
+				    :key #'column-name)) :into tests
 	 :finally (return (values indices tests)))
     #'(lambda (i1 i2)
 	(loop
@@ -218,7 +219,7 @@ several values 0.2 We test comparisons against those two columns.
 The first three tests compare rows in PETAL-LENGTH column
 The second three in PETAL-LENGTH and PETAL-WIDTH"
   (let* ((cm-table (loaded-test-table))
-	 (data (table cm-table))
+	 (data (table-data cm-table))
 	 (schema (table-schema cm-table)))
     (let ((row-comparator (row-comparator/cmt data '(petal-length) schema)))
       (assert-true (not (funcall row-comparator 0 1)))
@@ -235,7 +236,7 @@ The second three in PETAL-LENGTH and PETAL-WIDTH"
     (let ((row-index
 	   (loop :for i below row-count
 	      :collect i))
-	  (new-data (make-vv-array col-count)))
+	  (new-data (init-vv-array col-count)))
       (setf row-index
 	    (sort row-index
 		  (row-comparator/cmt
@@ -256,18 +257,18 @@ The last three use PETAL-LENGTH and PETAL-WIDTH.  PETAL-WIDTH is
 the tie-breaker for rows 5 and 7.  Otherwise, the sort is the
 same as for PETAL-LENGTH"
   (let* ((cm-table (loaded-test-table))
-	 (data (table cm-table))
+	 (data (table-data cm-table))
 	 (schema (table-schema cm-table)))
     (let ((target-rows '(1 0 3 5 7 2 6 8 9 4)))
-      (assert-true (vv-table-equality
+      (assert-true (vv-table-equal
 		    data (sorted-rows data '(petal-length) schema)
 		    :target-rows target-rows)))
     (let ((target-rows '(8 0 1 2 3 6 7 9 5 4)))
-      (assert-true (vv-table-equality
+      (assert-true (vv-table-equal
 		    data (sorted-rows data '(petal-width) schema)
 		    :target-rows target-rows)))
     (let ((target-rows '(1 0 3 7 5 8 2 6 9 4)))
-      (assert-true (vv-table-equality
+      (assert-true (vv-table-equal
 		    data (sorted-rows data '(petal-length petal-width) schema)
 		    :target-rows target-rows)))))
 
@@ -299,9 +300,9 @@ same as for PETAL-LENGTH"
     (let ((new-table
 	   (make-instance 'column-major-table :table data :table-schema schema)))
       (setf (slot-value new-table 'column-count)
-	    (length (table new-table))
+	    (length (table-data new-table))
 	    (slot-value new-table 'row-count)
-	    (length (aref (table new-table) 0))
+	    (length (aref (table-data new-table) 0))
 	    (slot-value new-table 'build-method) 'select)
       new-table)))
 
@@ -312,7 +313,7 @@ same as for PETAL-LENGTH"
 
 We test on the new table dimensions and contents"
   (let* ((table (loaded-test-table))
-	 (data (table table)))
+	 (data (table-data table)))
     (let ((new-table
 	   (select table
 		   :columns '(sepal-length petal-length)
@@ -322,7 +323,7 @@ We test on the new table dimensions and contents"
       (assert-number-equal 2 (column-count new-table))
       (assert-number-equal 4 (row-count new-table))
       (assert-true
-       (vv-table-equality data (table new-table)
+       (vv-table-equal data (table-data new-table)
 			  :target-rows target-rows
 			  :target-cols '(0 2))))
     (let ((new-table
@@ -333,13 +334,13 @@ We test on the new table dimensions and contents"
       (assert-number-equal 2 (column-count new-table))
       (assert-number-equal 6 (row-count new-table))
       (assert-true
-       (vv-table-equality data (table new-table)
+       (vv-table-equal data (table-data new-table)
 			  :target-rows target-rows
 			  :target-cols '(2 3))))
     (let ((new-table
 	   (select table
 		   :order-by 'petal-length))
 	  (target-rows '(1 0 3 5 7 2 6 8 9 4)))
-      (assert-true (vv-table-equality
-		    data (table new-table)
+      (assert-true (vv-table-equal
+		    data (table-data new-table)
 		    :target-rows target-rows)))))
